# python-fastapi-template

./: README.md  pyproject.toml
app/: app.py
