[project]
name = "pypi-package-name"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/git-org-name/git-repo-name"
Repository = "https://github.com/git-org-name/git-repo-name"
Documentation = "https://github.com/git-org-name/git-repo-name#readme"

[tool.mypy]
python_version = "3.11"

[tool.ruff]
line-length = 120
